[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/character_selection/background.png" type="Texture" id=1]
[ext_resource path="res://UI/character_selection/name_decor.png" type="Texture" id=2]
[ext_resource path="res://UI/Font Resources/wendy-10_confirm_use.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/character_selection/choose_decor.png" type="Texture" id=4]
[ext_resource path="res://UI/character_selection/scroll_left_button_hover.png" type="Texture" id=5]
[ext_resource path="res://UI/character_selection/scroll_right_button_hover.png" type="Texture" id=6]
[ext_resource path="res://UI/character_selection/character_selector.gd" type="Script" id=7]
[ext_resource path="res://UI/character_selection/scroll_right_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://UI/character_selection/scroll_right_button_normal.png" type="Texture" id=9]
[ext_resource path="res://UI/character_selection/scroll_left_button_normal.png" type="Texture" id=10]
[ext_resource path="res://UI/character_selection/scroll_left_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://UI/Font Resources/wendy-10_pause_menu_header.tres" type="DynamicFont" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 1 )
HScrollBar/styles/grabber_highlight = SubResource( 2 )
HScrollBar/styles/grabber_pressed = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )
HScrollBar/styles/scroll_focus = SubResource( 5 )

[node name="CharacterSelector" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 66.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 66.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 62.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 15.0
custom_constants/separation = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 3 )
text = "Choose Your Hero"
align = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 8.0
margin_top = 12.0
margin_right = 48.0
margin_bottom = 15.0
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 56.0
margin_bottom = 19.0

[node name="CharactersScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 54.0
rect_min_size = Vector2( 54, 0 )
theme = SubResource( 6 )
scroll_vertical_enabled = false

[node name="Characters" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/CharactersScroll"]
custom_constants/separation = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 56.0
margin_bottom = 44.0
custom_constants/separation = -5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 56.0
margin_bottom = 5.0
custom_constants/separation = 0

[node name="ScrollLeft" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 3.0
margin_bottom = 5.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 5 )

[node name="ScrollRight" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 53.0
margin_right = 56.0
margin_bottom = 5.0
size_flags_horizontal = 10
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )

[node name="SelectVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 56.0
margin_bottom = 21.0
mouse_filter = 2
custom_constants/separation = -2

[node name="Select" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/SelectVBox"]
margin_left = 10.0
margin_right = 46.0
margin_bottom = 13.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.435294, 0.435294, 0.435294, 1 )
enabled_focus_mode = 0
text = "Select"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/SelectVBox"]
margin_top = 11.0
margin_right = 56.0
margin_bottom = 21.0
custom_constants/separation = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/SelectVBox/VBoxContainer"]
margin_right = 56.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 3 )
text = "Name"
align = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/SelectVBox/VBoxContainer"]
margin_left = 12.0
margin_top = 6.0
margin_right = 44.0
margin_bottom = 10.0
size_flags_horizontal = 4
texture = ExtResource( 2 )
[connection signal="gui_input" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/ScrollLeft" to="." method="_on_ScrollLeft_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/ScrollRight" to="." method="_on_ScrollRight_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/SelectVBox/Select" to="." method="_on_Select_pressed"]
